			+d8 magic dmg
			drain pw if hits you
			half spell damage
		White Fluorite
			Energy Regen
		Green Fluorite
			Curse Resistance
		Obsidian
			Ignores DR
		Agate
			Free Action
		Jade
			Stinking cloud
			Poison resistance
		Luckstone
			Tohit +7
		Loadstone
			+2d4 dmg
			weldproof
		Touchstone
			+3d5 study
		Fossile dark
			2x dmg drain xp
		Silver Slingstone
			Sears silver haters
Anachrononaut changes
	Ana quest 
		Now a random power armor on ground zero, good luck.
	Power armor - 
		When on +4 movement points, 25 str, -19 ac, carries its
		own weight and +100 carry cap. 
		When off -6 ac, weighs 500.
		Can fire 1d(2+spe/2) blaster bolts from it.
		Is made of metal so hinders spellcasting.
		Cannot squeeze around boulders or do tight corners while worn.
		Must be charged, wearing it while on and firing lower charge.
	Gnome ana -
		Starts with silver armor/weapons and is made of silver.
		Silver knuckle dusters, allow you to attack barehanded as a
		half dragon as well as doing +5d4 dmg.
		Power armor and some lame armor
		Power armor starts time fluxed, doesn't give extra AC when on
		until repaired with an upgrade kit resized to fit you or
		another monster.
		Starts with a potion vaporizer and some potions.
	New salamander ana race, demolition expert.
		Vibrospear
		Fireproof armor, some dragonhide
		Flamethrower
			Sprays burning oil splashes doing (6+multishot bonus)d6
			Uses a charge system and uses 1 charge per use
Added armorsmiths
		Armorsmiths are meant to address the weird gap caused by
		upgrade kits for strangely sized races
		Maybe you'll find one in an adventure town
		Charge a price to provide various services
		Armor repair
			Remove damage from armor
		Shrink armor
			Lowers the size of an armor piece by 1 level
		Grow armor
			Increases the size of an armor piece by 1 level
			Requires an armor piece of the same type to be
			combined
		Change Shape
			Change the shape (barded/segmented/centaur) of a piece
			of armor